objects/ServiceResource.object
<CustomObject>
    <fields>
        <fullName>FSL__Efficiency__c</fullName>
        <label>Efficiency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__GanttLabel__c</fullName>
        <label>Gantt Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Online_Offset__c</fullName>
        <description>Online offset in minutes</description>
        <label>Online Offset</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Picture_Link__c</fullName>
        <label>Picture Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FSL__Priority__c</fullName>
        <label>Priority</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Travel_Speed__c</fullName>
        <label>Travel Speed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_a_Bay_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is a Bay Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_a_Tech__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is a Tech</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_a_Tool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is a Tool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_ServiceResources</fullName>
        <columns>Name</columns>
        <columns>RelatedRecord</columns>
        <columns>ResourceType</columns>
        <columns>IsActive</columns>
        <columns>FSL__GanttLabel__c</columns>
        <columns>Is_a_Bay_Area__c</columns>
        <columns>Is_a_Tech__c</columns>
        <columns>LastModifiedBy</columns>
        <columns>LastModifiedDate</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Resources</label>
    </listViews>
    <listViews>
        <fullName>My_ServiceResources</fullName>
        <filterScope>Mine</filterScope>
        <label>My Service Resources</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>FSL__Capacity_Resource_of_Type_Crew</fullName>
        <active>true</active>
        <errorConditionFormula>AND(IsCapacityBased,ISPICKVAL(ResourceType, &apos;C&apos;))</errorConditionFormula>
        <errorMessage>Capacity Resource Can&apos;t Be of Type Crew</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Resource_travel</fullName>
        <active>true</active>
        <errorConditionFormula>FSL__Travel_Speed__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>FSL__Travel_Speed__c</errorDisplayField>
        <errorMessage>Resource travel speed must be greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Single_resource_type_only</fullName>
        <active>true</active>
        <errorConditionFormula>(Is_a_Tech__c  &amp;&amp;  Is_a_Bay_Area__c)</errorConditionFormula>
        <errorDisplayField>Is_a_Tech__c</errorDisplayField>
        <errorMessage>a Resource can be a either Tech or a Bay, not both</errorMessage>
    </validationRules>
</CustomObject>